# DigitalBlog

./: .flake8  .gitignore  codegen.py  config.py  main.py  pyproject.toml
app/: __init__.py  cli.py  email.py  models.py
app/auth/: forms.py  routes.py
app/errors/: handlers.py
app/main/: forms.py  routes.py
app/static/: robots.txt  sitemap.xml
app/templates/: _comment.html  _layout.html  _macros.html  _message.html  _notify.html  _post.html  _user.html  about.html  base.html  billing.html  change_password.html  cookies.html  create_post.html  detail_message.html  detail_post.html  edit_profile.html  index-a.html  index.html  messages.html  moderation.html  notifies.html  post_body.html  request_bloger.html  search.html  send_message.html  update_comment.html  update_message.html  user.html  users.html
app/templates/admin/: index.html
app/templates/auth/: banned.html  confirm.html  forgetPassswordNotificationMessage.html  forgetPassword.html  forgetPasswordRequest.html  login.html  register.html  resetPassword.html  unconfirmed.html  user_agreement.html
app/templates/errors/: 403.html  404.html  500.html  503.html
app/translations/en/LC_MESSAGES/: messages.mo  messages.po
