[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
werkzeug = "^2.3.7"
click = "^8.1.7"
flask-migrate = "^4.0.5"
flask-pagedown = "^0.4.0"
flask-wtf = "^1.1.1"
flask-bcrypt = "^1.0.1"
langdetect = "^1.0.9"
flask-login = "^0.6.2"
sqlalchemy = "^2.0.20"
flask-babel = "^3.1.0"
wtforms = "^3.0.1"
flask-moment = "^1.0.5"
flask = "^2.3.3"
flask-bootstrap = "^3.3.7.1"
pillow = "^10.0.1"
app = "^0.0.1"
flask-sqlalchemy = "^3.1.1"
itsdangerous = "^2.1.2"
markdown = "^3.4.4"
psycopg2-binary = "2.9.7"
email-validator = "2.0.0.post2"
bs4 = "^0.0.1"
alembic = "^1.12.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"